fine tune bert alt and other notebooks updated

--- a/data_non_pprms.ipynb
+++ b/data_non_pprms.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "non_matching_utterances = filter_non_matching_utterances(transcripts, search_terms)\n",
     "\n",
     "# Sample 100 entries randomly from the results if there are more than 100\n",
-    "sampled_non_matching_utterances = random.sample(non_matching_utterances, min(1000, len(non_matching_utterances)))\n",
+    "sampled_non_matching_utterances = random.sample(non_matching_utterances, min(100, len(non_matching_utterances)))\n",
     "\n",
     "# Save the non-matching utterances to a JSON file\n",
     "output_file_path = 'data/non_matching_utterances.json'\n",
@@ -74,19 +74,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample 100 entries randomly from the results if there are more than 100\n",
+    "sampled_non_matching_utterances = random.sample(non_matching_utterances, min(100, len(non_matching_utterances)))\n",
+    "\n",
+    "# Save the non-matching utterances to a JSON file\n",
+    "output_file_path = 'data/non_matching_utterances.json'\n",
+    "with open(output_file_path, 'w') as file:\n",
+    "    json.dump(non_matching_utterances, file, indent=4)\n",
+    "\n",
+    "output_file_path = 'data/non_matching_utterances_sample.json'\n",
+    "with open(output_file_path, 'w') as file:\n",
+    "    json.dump(sampled_non_matching_utterances, file, indent=4)\n",
+    "\n",
+    "# print(\"Filtered Utterances:\", len(sampled_non_matching_utterances))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtered Utterances: 53986\n"
+      "Filtered Utterances: 49761\n",
+      "Filtered Utterances: 100\n"
      ]
     }
    ],
    "source": [
-    "print(\"Filtered Utterances:\", len(non_matching_utterances))"
+    "print(\"Filtered Utterances:\", len(non_matching_utterances))\n",
+    "print(\"Filtered Utterances:\", len(sampled_non_matching_utterances))"
    ]
   },
   {
