--- a/data_to_annotate.ipynb
+++ b/data_to_annotate.ipynb
@@ -1893,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1906,7 +1906,9 @@
       "Appended part 6\n",
       "Appended part 7\n",
       "Appended part 8\n",
-      "Appended part 9\n"
+      "Appended part 9\n",
+      "Appended authority part 0\n",
+      "Appended authority part 1\n"
      ]
     }
    ],
@@ -1930,6 +1932,16 @@
     "    with open(f'data/graded_new/filtered_data_MW_part_{i}.json', 'r') as file:\n",
     "        MW_part += json.load(file)\n",
     "    print(f\"Appended part {i}\")\n",
+    "\n",
+    "\n",
+    "for i in range(2):\n",
+    "    with open(f'data/graded_new/authority_markers_HN_part_{i}.json', 'r') as file:\n",
+    "        HN_part += json.load(file)\n",
+    "\n",
+    "    with open(f'data/graded_new/authority_markers_MW_part_{i}.json', 'r') as file:\n",
+    "        MW_part += json.load(file)\n",
+    "    print(f\"Appended authority part {i}\")\n",
+    "\n",
     "\n",
     "grouped_json1 = group_by_key(HN_part)\n",
     "grouped_json2 = group_by_key(MW_part)\n",
@@ -1966,23 +1978,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of graded samples:  800\n",
-      "Total number of matched terms:   1895\n",
-      "Total number of statement with match: 599\n",
-      "Terms per sample utterance:    2.37\n",
-      "Perfect Match Terms:           61.3%  (1161/1895)\n",
-      "PrM Positive Match Count:      506\n",
+      "Total number of graded samples:  1000\n",
+      "Total number of matched terms:   2146\n",
+      "Total number of statement with match: 741\n",
+      "Terms per sample utterance:    2.15\n",
+      "Perfect Match Terms:           62.3%  (1337/2146)\n",
+      "PrM Positive Match Count:      635\n",
       "Hedge Match Count:                441\n",
-      "Authority Match Count:            65\n",
-      "None Match Count:              655\n",
-      "Total Match Statements:        20.0%  ( 160/ 800)\n"
+      "Authority Match Count:            194\n",
+      "None Match Count:              702\n",
+      "Total Match Statements:        18.4%  ( 184/ 1000)\n"
      ]
     }
    ],
@@ -2060,14 +2072,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Length: 599\n"
+      "Final Length: 741\n"
      ]
     }
    ],
@@ -2127,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2135,7 +2147,7 @@
      "output_type": "stream",
      "text": [
       "Data merge complete.\n",
-      "Total Statements: 599\n"
+      "Total Statements: 741\n"
      ]
     }
    ],
