--- a/public_model_benchmarks.ipynb
+++ b/public_model_benchmarks.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompts import system_prompt\n",
-    "\n"
+    "from prompts import system_prompt"
    ]
   },
   {
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,27 +285,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 599 examples from data/human_annotated_model_response.json\n",
+      "Loaded 741 examples from data/human_annotated_model_response.json\n",
       "Processed and saved 100 samples, with 0 Gemini samples\n",
-      "Processed and saved 200 samples, with 1 Gemini samples\n",
-      "Processed and saved 300 samples, with 1 Gemini samples\n",
-      "Processed and saved 400 samples, with 1 Gemini samples\n",
-      "Processed and saved 500 samples, with 1 Gemini samples\n",
+      "Processed and saved 200 samples, with 0 Gemini samples\n",
+      "Processed and saved 300 samples, with 0 Gemini samples\n",
+      "Processed and saved 400 samples, with 0 Gemini samples\n",
+      "Processed and saved 500 samples, with 0 Gemini samples\n",
+      "Processed and saved 600 samples, with 2 Gemini samples\n",
+      "Processed and saved 606 samples, with 14 Gemini samples\n",
+      "Processed and saved 621 samples, with 44 Gemini samples\n",
+      "Processed and saved 636 samples, with 74 Gemini samples\n",
+      "Processed and saved 651 samples, with 104 Gemini samples\n",
+      "Processed and saved 666 samples, with 134 Gemini samples\n",
+      "Processed and saved 681 samples, with 164 Gemini samples\n",
+      "Processed and saved 696 samples, with 194 Gemini samples\n",
+      "Processed and saved 700 samples, with 202 Gemini samples\n",
+      "Processed and saved 711 samples, with 224 Gemini samples\n",
+      "Processed and saved 726 samples, with 254 Gemini samples\n",
+      "Processed and saved 741 samples, with 284 Gemini samples\n",
       "\n",
       "Model Tally:\n",
-      " correct: 599\n",
-      " gpt-3.5-turbo: 599\n",
-      " gpt-4o: 599\n",
-      " gpt-4-turbo: 599\n",
-      " gemini-1.5-flash: 599\n",
-      " gemini-1.5-pro: 599\n"
+      " correct: 741\n",
+      " gpt-3.5-turbo: 741\n",
+      " gpt-4o: 741\n",
+      " gpt-4-turbo: 741\n",
+      " gemini-1.5-flash: 741\n",
+      " gemini-1.5-pro: 741\n"
      ]
     }
    ],
@@ -415,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -453,140 +464,140 @@
       "############################################################\n",
       "Results for Model: gpt-3.5-turbo\n",
       " * Class: none\n",
-      "   F1 Score: 0.5186\n",
-      "   Precision: 0.3618\n",
-      "   Recall: 0.9151\n",
-      "   Accuracy: 0.3501\n",
+      "   F1 Score: 0.5026\n",
+      "   Precision: 0.3462\n",
+      "   Recall: 0.9170\n",
+      "   Accuracy: 0.3356\n",
       "\n",
       " * Class: hedge\n",
-      "   F1 Score: 0.6962\n",
+      "   F1 Score: 0.6774\n",
       "   Precision: 0.7664\n",
-      "   Recall: 0.6377\n",
-      "   Accuracy: 0.5340\n",
+      "   Recall: 0.6068\n",
+      "   Accuracy: 0.5121\n",
       "\n",
       " * Class: authority\n",
-      "   F1 Score: 0.2609\n",
-      "   Precision: 0.8769\n",
-      "   Recall: 0.1532\n",
-      "   Accuracy: 0.1500\n",
+      "   F1 Score: 0.4880\n",
+      "   Precision: 0.8918\n",
+      "   Recall: 0.3359\n",
+      "   Accuracy: 0.3228\n",
       "\n",
       "Overall Model Performance:\n",
-      "Average F1 Score: 0.4919\n",
-      "Average Precision: 0.6684\n",
-      "Average Recall: 0.5687\n",
-      "Total Accuracy: 0.5444\n",
+      "Average F1 Score: 0.5560\n",
+      "Average Precision: 0.6681\n",
+      "Average Recall: 0.6199\n",
+      "Total Accuracy: 0.5639\n",
       "\n",
       "\n",
       "\n",
       "############################################################\n",
       "Results for Model: gpt-4o\n",
       " * Class: none\n",
-      "   F1 Score: 0.6141\n",
-      "   Precision: 0.4458\n",
-      "   Recall: 0.9865\n",
-      "   Accuracy: 0.4431\n",
+      "   F1 Score: 0.6034\n",
+      "   Precision: 0.4345\n",
+      "   Recall: 0.9871\n",
+      "   Accuracy: 0.4320\n",
       "\n",
       " * Class: hedge\n",
-      "   F1 Score: 0.7683\n",
+      "   F1 Score: 0.7628\n",
       "   Precision: 0.9660\n",
-      "   Recall: 0.6377\n",
-      "   Accuracy: 0.6237\n",
+      "   Recall: 0.6302\n",
+      "   Accuracy: 0.6165\n",
       "\n",
       " * Class: authority\n",
-      "   F1 Score: 0.4198\n",
-      "   Precision: 0.8462\n",
-      "   Recall: 0.2792\n",
-      "   Accuracy: 0.2657\n",
+      "   F1 Score: 0.6703\n",
+      "   Precision: 0.9433\n",
+      "   Recall: 0.5199\n",
+      "   Accuracy: 0.5041\n",
       "\n",
       "Overall Model Performance:\n",
-      "Average F1 Score: 0.6007\n",
-      "Average Precision: 0.7526\n",
-      "Average Recall: 0.6345\n",
-      "Total Accuracy: 0.6658\n",
+      "Average F1 Score: 0.6788\n",
+      "Average Precision: 0.7813\n",
+      "Average Recall: 0.7124\n",
+      "Total Accuracy: 0.6836\n",
       "\n",
       "\n",
       "\n",
       "############################################################\n",
       "Results for Model: gpt-4-turbo\n",
       " * Class: none\n",
-      "   F1 Score: 0.7442\n",
-      "   Precision: 0.6107\n",
-      "   Recall: 0.9524\n",
-      "   Accuracy: 0.5926\n",
+      "   F1 Score: 0.7357\n",
+      "   Precision: 0.6026\n",
+      "   Recall: 0.9442\n",
+      "   Accuracy: 0.5818\n",
       "\n",
       " * Class: hedge\n",
-      "   F1 Score: 0.7951\n",
+      "   F1 Score: 0.7826\n",
       "   Precision: 0.9592\n",
-      "   Recall: 0.6790\n",
-      "   Accuracy: 0.6599\n",
+      "   Recall: 0.6609\n",
+      "   Accuracy: 0.6429\n",
       "\n",
       " * Class: authority\n",
-      "   F1 Score: 0.5355\n",
-      "   Precision: 0.7538\n",
-      "   Recall: 0.4153\n",
-      "   Accuracy: 0.3657\n",
+      "   F1 Score: 0.7404\n",
+      "   Precision: 0.8454\n",
+      "   Recall: 0.6586\n",
+      "   Accuracy: 0.5878\n",
       "\n",
       "Overall Model Performance:\n",
-      "Average F1 Score: 0.6916\n",
-      "Average Precision: 0.7746\n",
-      "Average Recall: 0.6822\n",
-      "Total Accuracy: 0.7511\n",
+      "Average F1 Score: 0.7529\n",
+      "Average Precision: 0.8024\n",
+      "Average Recall: 0.7546\n",
+      "Total Accuracy: 0.7554\n",
       "\n",
       "\n",
       "\n",
       "############################################################\n",
       "Results for Model: gemini-1.5-flash\n",
       " * Class: none\n",
-      "   F1 Score: 0.5631\n",
-      "   Precision: 0.3985\n",
-      "   Recall: 0.9596\n",
-      "   Accuracy: 0.3919\n",
+      "   F1 Score: 0.5464\n",
+      "   Precision: 0.3818\n",
+      "   Recall: 0.9606\n",
+      "   Accuracy: 0.3759\n",
       "\n",
       " * Class: hedge\n",
-      "   F1 Score: 0.7798\n",
+      "   F1 Score: 0.7725\n",
       "   Precision: 0.9433\n",
-      "   Recall: 0.6645\n",
-      "   Accuracy: 0.6390\n",
+      "   Recall: 0.6541\n",
+      "   Accuracy: 0.6293\n",
       "\n",
       " * Class: authority\n",
-      "   F1 Score: 0.3293\n",
-      "   Precision: 0.8308\n",
-      "   Recall: 0.2053\n",
-      "   Accuracy: 0.1971\n",
+      "   F1 Score: 0.5877\n",
+      "   Precision: 0.9330\n",
+      "   Recall: 0.4289\n",
+      "   Accuracy: 0.4161\n",
       "\n",
       "Overall Model Performance:\n",
-      "Average F1 Score: 0.5574\n",
-      "Average Precision: 0.7242\n",
-      "Average Recall: 0.6098\n",
-      "Total Accuracy: 0.6296\n",
+      "Average F1 Score: 0.6355\n",
+      "Average Precision: 0.7527\n",
+      "Average Recall: 0.6812\n",
+      "Total Accuracy: 0.6470\n",
       "\n",
       "\n",
       "\n",
       "############################################################\n",
       "Results for Model: gemini-1.5-pro\n",
       " * Class: none\n",
-      "   F1 Score: 0.6524\n",
-      "   Precision: 0.4901\n",
-      "   Recall: 0.9757\n",
-      "   Accuracy: 0.4842\n",
+      "   F1 Score: 0.6465\n",
+      "   Precision: 0.4872\n",
+      "   Recall: 0.9607\n",
+      "   Accuracy: 0.4777\n",
       "\n",
       " * Class: hedge\n",
-      "   F1 Score: 0.7929\n",
+      "   F1 Score: 0.7870\n",
       "   Precision: 0.9637\n",
-      "   Recall: 0.6735\n",
-      "   Accuracy: 0.6569\n",
+      "   Recall: 0.6651\n",
+      "   Accuracy: 0.6489\n",
       "\n",
       " * Class: authority\n",
-      "   F1 Score: 0.4060\n",
-      "   Precision: 0.8308\n",
-      "   Recall: 0.2687\n",
-      "   Accuracy: 0.2547\n",
+      "   F1 Score: 0.6530\n",
+      "   Precision: 0.9021\n",
+      "   Recall: 0.5117\n",
+      "   Accuracy: 0.4848\n",
       "\n",
       "Overall Model Performance:\n",
-      "Average F1 Score: 0.6171\n",
-      "Average Precision: 0.7615\n",
-      "Average Recall: 0.6393\n",
-      "Total Accuracy: 0.6891\n",
+      "Average F1 Score: 0.6955\n",
+      "Average Precision: 0.7843\n",
+      "Average Recall: 0.7125\n",
+      "Total Accuracy: 0.7046\n",
       "\n",
       "\n",
       "\n"
